--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,7 @@
       content="Web site created using create-react-app"
     />
     <title>Connor Streng</title>
+    <script src="https://use.fontawesome.com/5356c7caff.js"></script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
