--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,8 @@
       content="Web site created using create-react-app"
     />
     <title>Connor Streng</title>
+    <link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap" rel="stylesheet">
     <script src="https://use.fontawesome.com/5356c7caff.js"></script>
   </head>
   <body>
