--- a/public/index.html
+++ b/public/index.html
@@ -9,13 +9,18 @@
       content="Web site created using create-react-app"
     />
     <title>Connor Streng</title>
+
+    <link rel=”manifest” href=”%PUBLIC_URL%/manifest.json”>
+
     <link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Squada+One&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
     <script src="https://use.fontawesome.com/5356c7caff.js"></script>
+
     <link rel="icon" type="image/png" href="../src/favicon-32x32.png" sizes="32x32" />
-    <link rel="icon" type="image/png" href="../src/favicon.ico" sizes="16x16" />
+    <link rel="icon" type="image/png" href="../src/favicon-16x16.png" sizes="16x16" />
+    
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
