--- a/public/index.html
+++ b/public/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
+    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
@@ -9,9 +10,11 @@
       content="Web site created using create-react-app"
     />
     <title>Connor Streng</title>
-
+    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <script src="https://use.fontawesome.com/5356c7caff.js"></script>
     <link href="https://fonts.googleapis.com/css2?family=Fredoka+One&family=Julius+Sans+One&family=Poppins&family=Squada+One&display=swap" rel="stylesheet">
+    <link rel="icon" type="image/png" href="%PUBLIC_URL%/favicon-32x32.png" sizes="32x32" />
+    <link rel="icon" type="image/png" href="%PUBLIC_URL%/favicon-16x16.png" sizes="16x16" />
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
