--- a/public/index.html
+++ b/public/index.html
@@ -15,8 +15,11 @@
     <script src="https://use.fontawesome.com/5356c7caff.js"></script>
     
     <link href="https://fonts.googleapis.com/css2?family=Fredoka+One&family=Julius+Sans+One&family=Poppins&family=Squada+One&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Sacramento&display=swap" rel="stylesheet">
+
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.5.1/gsap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.5.1/ScrollTrigger.min.js"></script>
+    
     <link rel="icon" type="image/png" href="%PUBLIC_URL%/favicon-32x32.png" sizes="32x32" />
     <link rel="icon" type="image/png" href="%PUBLIC_URL%/favicon-16x16.png" sizes="16x16" />
   </head>
