--- a/public/index.html
+++ b/public/index.html
@@ -14,11 +14,8 @@
 
     <script src="https://use.fontawesome.com/5356c7caff.js"></script>
     
-    <link href="https://fonts.googleapis.com/css2?family=Fredoka+One&family=Julius+Sans+One&family=Poppins&family=Squada+One&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Sacramento&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Yanone+Kaffeesatz:wght@300&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Spectral+SC&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Codystar&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Fredoka+One&family=Julius+Sans+One&family=Raleway+Dots&family=Sacramento&family=Spectral+SC&family=Squada+One&family=Yanone+Kaffeesatz&display=swap" rel="stylesheet">
+
     
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.5.1/gsap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.5.1/ScrollToPlugin.min.js"></script>
