--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
       name="Connor Streng"
       content="Web site created using create-react-app"
     />
-    <title>Connor Streng</title>
+    <title>Connor Streng | Frontend Developer</title>
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
     <script src="https://use.fontawesome.com/5356c7caff.js"></script>
@@ -23,7 +23,7 @@
     <link rel="icon" type="image/png" href="%PUBLIC_URL%/favicon-32x32.png" sizes="32x32" />
     <link rel="icon" type="image/png" href="%PUBLIC_URL%/favicon-16x16.png" sizes="16x16" />
   </head>
-  <body>
+  <body style="visibility: hidden;">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
   </body>
